[project]
name = "bolt-python-starter-template"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt==1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff==0.9.4",
]

[tool.ruff]
line-length = 125
exclude = [".venv", "venv"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
